--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_fonts: ^5.1.0
   animated_text_kit: ^4.2.2
   flutter_flip_card: ^0.0.4
+  social_media_flutter: ^0.0.2
+  url_launcher: ^6.1.12
+  get: ^4.6.5
+  syncfusion_flutter_pdfviewer: ^22.1.38
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/
+      - assets/flutter_resume.pdf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
